# shift_api_gateway

./: .dockerignore  .flake8  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  pytest.ini  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
initdb.d/: create_databases.sql
k8s/: zar-api-gateway-service-configmap.yaml  zar-api-gateway-service-deployment.yaml  zar-api-gateway-service-secret.yaml  zar-api-gateway-service-service.yaml
my-charts/: Chart.yaml  values.yaml
my-charts/templates/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
src/app/: main.py
src/db/: Script.sql
src/tests/: test_api.py
