[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Nikita Renjov <n.renjov@cft.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
httpx = "^0.27.0"
jwt = "^1.3.1"
python-decouple = "^3.8"
pytest-cov = "^5.0.0"
kafka-python-ng = "^2.2.2"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
prometheus-client = "^0.20.0"
jaeger-client = "^4.8.0"
opentelemetry-api = "^1.27.0"
opentelemetry-sdk = "^1.27.0"
opentelemetry-instrumentation-fastapi = "^0.48b0"
opentelemetry-exporter-jaeger = "^1.15.0"
protobuf = "==3.20.*"
opentelemetry-instrumentation-httpx = "^0.48b0"
opentelemetry-instrumentation-requests = "^0.48b0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.19.2"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.8"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
